--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+server.port=8080
+
+management.endpoints.web.exposure.include=health,info,trace,metrics
+management.endpoint.health.show-details=always
