--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,20 @@
    			<artifactId>maven-surefire-plugin</artifactId>
     		<version>3.0.0-M5</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-engine</artifactId>
+    		<version>5.7.0</version>
+    		<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-api</artifactId>
+    		<version>5.7.0</version>
+   			 <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
